# dbkit

./: .codeclimate.yml  .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  ChangeLog  LICENCE  MANIFEST.in  Makefile  README  README.md  README.rst  TODO  buildkit.py  dbkit.py  mkdocs.yml  notes  notes.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
dbkit/: __init__.py
docs/: Makefile  changelog.md  conf.py  examples.md  examples.rst  index.md  index.rst  installation.rst  intro.rst  make.bat  overview.md  overview.rst  philosophy.md  philosophy.rst  reference.md  reference.rst  tutorial.md  tutorial.rst
examples/: counters.py  counters.sql  notary.py  pools.py  pools.sql  schema.sql
examples/notary/: notary.py  notary.sql  requirements.txt
examples/notary/static/: style.css
examples/notary/templates/: frontpage.html  layout.html  project.html  recent_entries.html
examples/notary/views/: frontpage.stpl  layout.stpl  project.stpl
tests/: __init__.py  fakedb.py  test_dbkit.py  test_pool.py  test_pools.py  utils.py
