[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbkit"
dynamic = ["version"]
description = "DB-API made easier"
license = "MIT"
authors = [
    { name = "Keith Gaughan", email = "k@stereochro.me" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Database",
]

[project.urls]
Homepage = "https://github.com/kgaughan/dbkit/"

[tool.hatch.version]
path = "dbkit/__init__.py"
